# frappe_color_changer

./: LICENSE  README.md  alon.css  pyproject.toml
frappe_color_changer/: hooks.py  modules.txt
frappe_color_changer/frappe_color_changer/doctype/frappe_color_changer/: frappe_color_changer.js  frappe_color_changer.json  frappe_color_changer.py  test_frappe_color_changer.py
frappe_color_changer/frappe_color_changer/doctype/selections_chld_tbl/: selections_chld_tbl.json  selections_chld_tbl.py
frappe_color_changer/public/js/: frappe_color_changer.js
